--- a/static/CSS/coisa.css
+++ b/static/CSS/coisa.css
@@ -4,7 +4,6 @@ body{
 header{
     width: 100vw;
     height: 18vh;    
-    display: flex;
 }
 
 /* Estilo do cabeçalho */
@@ -71,67 +70,7 @@ header{
     padding: 0.4rem;
     border-radius: 5rem;
 }
-/* Estilo serviços encaminhados */
-
-.container-servico-encaminhado{
-    height:auto;
-    margin:1rem 1.5rem 0rem 1rem;
-}
-
-.container-servico-encaminhado h2{
-    font-size: 2rem;
-    color: var(--color01);
-    margin-left: 1rem;
-}
-
-/* Para telas normais (padrão) */
-.container-encaminhamento {
-    display: grid;
-    height: auto;
-    grid-template-columns: 1fr; /* Uma coluna */
-    gap: 1rem; /* Espaço entre os itens */
-}
-
-.servico-encaminhado{
-    background-color: var(--color01);
-    height: 60%;
-    width: 45%;
-    margin: 0.5rem;
-    border-radius: 1rem;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    flex-direction: column-reverse;
-   
-}
-
-.servico-encaminhado-local{
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: bold;
-
-}
-
-.servico-encaminhado-data{
-    background-color: var(--color04);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    padding: 1rem 3rem;
-    border-top-left-radius: 0.5rem;
-    border-bottom-right-radius: 2rem;
-    display: flex;
-    gap: 0.5rem;
-    font-size: 1.5rem ;
-    box-shadow: 2px 2px 8px var(--color02);
-    
-}
-
-.servico-encaminhado-dia-semana{
-    font-weight: bold;
-}
-
+/* Estilização da area "Serviço de Hoje" */
 /* Estilo do css do man do site */
 .container-baixo{
     width: 100vw;
@@ -213,75 +152,163 @@ hr{
     z-index: 1000;
     transition: background-color 0.3s ease, transform 0.3s ease; /* Transições suaves */
 }
-/* From Uiverse.io by vinodjangid07 */ 
-.Btn {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 45px;
-    height: 45px;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    position: fixed; /* Mudei para fixed */
-    bottom: 20px; /* Distância do fundo */
-    right: 20px; /* Distância da direita */
-    overflow: hidden;
-    transition-duration: .3s;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-    background-color:var(--color03);
-    color: #000;
-    z-index: 1000; /* Garante que o botão fique sobre outros elementos */
+
+/* Estilo serviços encaminhados */
+
+.container-servico-encaminhado{
+    height:auto;
+    margin:1rem 1.5rem 0rem 1rem;
 }
 
-  
-  /* plus sign */
-  .sign {
-    width: 100%;
-    transition-duration: .3s;
+.container-servico-encaminhado h2{
+    font-size: 2rem;
+    color: var(--color01);
+    margin-left: 1rem;
+}
+
+/* Para telas normais (padrão) */
+.container-encaminhamento {
+    display: grid;
+    height: auto;
+    grid-template-columns: 1fr; /* Uma coluna */
+    gap: 1rem; /* Espaço entre os itens */
+}
+
+.servico-encaminhado{
+    background-color: var(--color01);
+    height: 60%;
+    width: 45%;
+    margin: 0.5rem;
+    border-radius: 1rem;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column-reverse;
+   
+}
+
+.servico-encaminhado-local{
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+
+}
+
+.servico-encaminhado-data{
+    background-color: var(--color04);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    padding: 1rem 3rem;
+    border-top-left-radius: 0.5rem;
+    border-bottom-right-radius: 2rem;
+    display: flex;
+    gap: 0.5rem;
+    font-size: 1.5rem ;
+    box-shadow: 2px 2px 8px var(--color02);
+    
+}
+
+.servico-encaminhado-dia-semana{
+    font-weight: bold;
+}
+
+
+
+/* Estilo do btn-fazer-solicitacao */
+.btn-fazer-solicitacao{
+    border: var(--color03) solid 0.1rem;
+    border-radius: 5rem;
+    padding: 1.5rem;
+    background-color: rgba(0, 0, 0, 0.158);
+    color: var(--color03);
+    font-weight: bold;
+    transition-duration: 0.2s;
+    margin: 0rem 3rem 0rem 3rem;
+}
+
+.btn-fazer-solicitacao:hover{
+    border: none;
+    background: var(--color03);
+    color: var(--color01);
+}
+/* Para telas normais (padrão) */
+.container-encaminhamento {
+    display: grid;
+    height: auto;
+    grid-template-columns: 1fr; 
+    grid-auto-rows: auto; 
+    gap: 1rem; 
+    padding: 1rem; 
+}
+
+.servico-encaminhado {
+    width: 100%; 
+    height: 12rem; 
+    padding: 1rem; 
+    box-sizing: border-box;
     display: flex;
     align-items: center;
-    justify-content: center;
-  }
-  
-  .sign svg {
-    width: 17px;
-  }
-  
-  .sign svg path {
-    fill: rgb(0, 0, 0);
-  }
-  /* text */
-  .text {
-    position: absolute;
-    right: 0%;
-    width: 0%;
-    opacity: 0;
-    color: rgb(0, 0, 0);
-    font-size: 1.2em;
-    font-weight: 600;
-    transition-duration: .3s;
-  }
-  /* hover effect on button width */
-  .Btn:hover {
-    width: 125px;
-    border-radius: 40px;
-    transition-duration: .3s;
-  }
-  
-  .Btn:hover .sign {
-    width: 30%;
-    transition-duration: .3s;
-    padding-left: 20px;
-  }
-  /* hover effect button's text */
-  .Btn:hover .text {
-    opacity: 1;
-    width: 70%;
-    transition-duration: .3s;
-    padding-right: 10px;
-  }
-  /* button click effect*/
-  .Btn:active {
-    transform: translate(2px ,2px);
-  }
+    flex-direction: row;
+    text-decoration: none;
+}
+
+.servico-urgencia{
+    font-weight: bold;
+    font-size: medium;
+    border: black solid 1px;
+    border-radius: 2rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
+}
+/* -------------------------RESPONSIVIDADE-------------------- */
+/* Estilos para telas maiores */
+@media(max-width:1000px) {
+    main{
+        height: 100%;
+    }
+
+}
+
+@media (min-width:1000px) {
+    body{
+        overflow: hidden;
+    }
+    main {
+        display: flex;
+        justify-content: space-between;
+        height: 100vh;
+    }
+    .horas h2{
+        font-size: 4rem;
+    }
+
+    .servico-encaminhado{
+        height: 18rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .container-header-user{
+        display: flex;
+        justify-content: center;
+        padding-bottom: 1rem ;
+    }
+
+    .container-servico-encaminhado  {
+        width: 50%;
+        margin-top: 3rem;
+    }
+    .container-encaminhamento {
+        grid-template-columns: 1fr 1fr; 
+        gap: 2rem; 
+    }
+    .container-encaminhamento {
+        grid-template-columns: 1fr 1fr; 
+        grid-auto-rows: minmax(150px, auto); 
+        gap: 2rem; 
+        padding: 1rem; 
+    }
+}
+
