--- a/templates/TLadministrador.html
+++ b/templates/TLadministrador.html
@@ -61,17 +61,23 @@
             </section>
             <section>
                 <div class="button-container">
+                   <a href="">
                     <button class="button">
                         <img src="/static/IMG/15.png" alt="Validação">
                     </button>
+                   </a> 
+                   <a href="">
                     <button class="button">
                         <img src="/static/IMG/14.png" alt="Encaminhamento">
                     </button>
-                  
-                    <button class="button">
+                   </a>
+                    <a href="">
+                      <button class="button">
                         <img src="/static/IMG/13.png" alt="Relatorios">
                         
-                    </button>
+                    </button>  
+                    </a>                  
+                    
                   </div>
                   
             </section>
