--- a/templates/TLadministrador.html
+++ b/templates/TLadministrador.html
@@ -64,20 +64,22 @@
                    <a href="">
                     <button class="button">
                         <img src="/static/IMG/15.png" alt="Validação">
+                        <p class="btn-txt">Validar finalização</p>
                     </button>
                    </a> 
                    <a href="">
                     <button class="button">
                         <img src="/static/IMG/14.png" alt="Encaminhamento">
+                        <p class="btn-txt">Chamado em aberto</p>
                     </button>
                    </a>
                     <a href="">
                       <button class="button">
                         <img src="/static/IMG/13.png" alt="Relatorios">
-                        
+                      
                     </button>  
                     </a>                  
-                    
+                    <p class="btn-txt">Relatorios</p>
                   </div>
                   
             </section>
