--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -24,7 +24,7 @@
             <!-- Contêiner do cabeçalho com botão de voltar e data atual -->
             <section class="container-header">
                 <div class="container-header_btn">
-                    <button class="container-header_btn-voltar" href=''><i class="fa-solid fa-arrow-left"></i>Voltar</button>
+                    <button class="container-header_btn-voltar" onclick="funcVoltar()"><i class="fa-solid fa-arrow-left"></i>Voltar</button>
                 </div>
                 <div class="horas">
                     <h2 class="saudacao" id="saudacao"></h2>
