--- a/templates/TLadministrador.html
+++ b/templates/TLadministrador.html
@@ -35,11 +35,22 @@
                         <p class="container-header-user_cargo">Técnico</p>
                     </div>
                 </div>
-                <div class="container-header-data">
-                    <div class="data">
-                        <p class="dia-semana" id="dia-semana">Qui</p><p class="dia" id="dia">10</p><p class="mes" id="mes">Set</p>
-                    </div>
-                </div>
+                <nav class="nav">
+                    <input type="checkbox" id="menu-toggle">
+                    <label for="menu-toggle" class="menu-icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </label>
+                    <ul class="menu">
+                        <li><a href="#home"><img src="/static/IMG/12.png" alt=""> Solicitações</a></li>
+                        <li><a href="#servicos"> <img src="/static/IMG/13.png" alt=""> Serviços</a></li>
+                        <li><a href="#sobre"> <img src="/static/IMG/14.png" alt=""> Sobre</a></li>
+                        <li><a href="#contato"> <img src="/static/IMG/15.png" alt=""> Contato</a></li>
+                    </ul>
+                </nav>
+                
+                
             </section>
         </header>
         <main class="container-baixo">
@@ -59,30 +70,7 @@
                     </div>
                 </div>
             </section>
-            <section>
-                <div class="button-container">
-                   <a href="">
-                    <button class="button">
-                        <img src="/static/IMG/15.png" alt="Validação">
-                        <p class="btn-txt">Validar finalização</p>
-                    </button>
-                   </a> 
-                   <a href="">
-                    <button class="button">
-                        <img src="/static/IMG/14.png" alt="Encaminhamento">
-                        <p class="btn-txt">Chamado em aberto</p>
-                    </button>
-                   </a>
-                    <a href="">
-                      <button class="button">
-                        <img src="/static/IMG/13.png" alt="Relatorios">
-                      
-                    </button>  
-                    </a>                  
-                    <p class="btn-txt">Relatorios</p>
-                  </div>
-                  
-            </section>
+            
             <section>
                 <button class="Btn">
                   
