--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -17,6 +17,7 @@
         <!-- link Arquivo JS função data -->
          <script defer src="/static/JS/funcao-data.js"></script>
          <script defer src = "/static/JS/funcao-horas.js"></script>
+         <script defer src="/static/JS/funcao-voltar.js"></script>
          <!-- Link para o Ajax -->
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
          <!-- link JS biblioteca SweetAlert -->
@@ -25,7 +26,7 @@
     </head>
     <body>
         <nav>
-            <button class="container-header_btn-voltar" href=''><i class="fa-solid fa-arrow-left"></i>Voltar</button>
+            <button class="container-header_btn-voltar" onclick="funcVoltar()"><i class="fa-solid fa-arrow-left"></i>Voltar</button>
         </nav>
         <main>
             <section class="container-main">
