--- a/templates/RF006A-aceitaSolic.html
+++ b/templates/RF006A-aceitaSolic.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/CSS/RF006A-aceitaSolic.css">
     <!-- Link Arquivo JS -->
     <script defer src="/static/JS/RF006-TLmanuten.js"></script>
+    <script defer src="/static/JS/funcao-voltar.js"></script>
     <!-- Biblioteca jQuery para manipulação de DOM e requisições Ajax -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- Biblioteca Font Awesome para uso de ícones na página -->
@@ -23,7 +24,7 @@
     <nav>
         <section class="container-header">
             <div class="container-header_btn">
-                <button class="container-header_btn-voltar" href=''><i class="fa-solid fa-arrow-left"></i>Voltar</button>
+                <button class="container-header_btn-voltar" onclick="funcVoltar()"><i class="fa-solid fa-arrow-left"></i>Voltar</button>
             </div>
         </section>
     </nav>
