--- a/templates/TLadministrador.html
+++ b/templates/TLadministrador.html
@@ -84,7 +84,7 @@
                   
             </section>
             <section>
-                <button class="Btn" onclick="tlSolicitacao()">
+                <button class="Btn" onclick="redirectSolicitacao()">
                   
                   <div class="sign">
                     <span class="material-symbols-outlined">
