--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -10,7 +10,7 @@
         <!-- Scripts JavaScript: Carregamento dos arquivos de script da página -->
         <script defer src="/static/JS/RF003-solic.js"></script>
         <script defer src="/static/JS/funcao-data.js"></script>
-        
+        <script defer src="/static/JS/funcao-voltar.js"></script>
         <!-- Biblioteca de ícones do Font Awesome para uso de ícones na página -->
         <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
         <!-- Biblioteca jQuery para facilitar o uso de Ajax e manipulação de DOM -->
