--- a/templates/RF008-fimchamado.html
+++ b/templates/RF008-fimchamado.html
@@ -7,6 +7,8 @@
     <!-- Link para o CSS global e o CSS específico desta página -->
     <link rel="stylesheet" href="/static/CSS/global.css">
     <link rel="stylesheet" href="/static/CSS/RF008-fimchamado.css">
+    <!-- Scripts JavaScript: Carregamento dos arquivos de script da página -->
+    <script defer src="/static/JS/funcao-voltar.js"></script>
     <!-- Biblioteca de ícones Font Awesome -->
     <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
     <!-- link JS biblioteca SweetAlert -->
@@ -20,7 +22,7 @@
     <header class="cabecalho">
         <div class="cabecalho__container">
             <!-- Botão para voltar à página anterior -->
-            <button class="cabecalho__botao cabecalho__botao--voltar" onclick="window.history.back();">
+            <button class="cabecalho__botao cabecalho__botao--voltar" onclick="funcVoltar()">
                 <i class="fa-solid fa-arrow-left"></i> Voltar
             </button>
         </div>
