--- a/static/CSS/TLadministrador.css
+++ b/static/CSS/TLadministrador.css
@@ -40,12 +40,29 @@ header {
 }
 
 .nav ul li a {
+  position: relative; 
   text-decoration: none;
   color: var(--color05);
   font-size: 1.5rem;
   font-weight: 600;
+  padding-bottom: 5px; 
 }
 
+.nav ul li a::after {
+  content: '';
+  position: absolute;
+  left: 50%; 
+  bottom: 0;
+  width: 0;
+  height: 2px; 
+  background-color: var(--color05); 
+  transition: width 0.4s ease, left 0.4s ease; 
+}
+
+.nav ul li a:hover::after {
+  width: 100%; 
+  left: 0; 
+}
 .menu-icon {
   display: none;
   cursor: pointer;
@@ -66,6 +83,75 @@ header {
   width: auto;
   height: 2.5rem;
 }
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 4rem; /* Largura inicial do botão */
+  height: 4rem;
+  border: none;
+  border-radius: 50%;
+  margin: auto;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition-duration: .3s;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+  background-color: var(--color05);
+  margin-right: 1.5rem;
+}
+
+.button:hover {
+  width: 10rem; /* Limita o tamanho no hover para 10rem */
+  border-radius: 40px;
+  transition-duration: .3s;
+}
+
+.button__icon {
+  width: 100%;
+  transition-duration: .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button__icon svg {
+  width: 1.5rem;
+}
+
+.button__icon svg path {
+  fill: white;
+}
+
+.button__text {
+  position: absolute;
+  right: 0%;
+  width: 0%;
+  opacity: 0;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 600;
+  transition-duration: .3s;
+}
+
+.button:hover .button__icon {
+  width: 26%;
+  transition-duration: .3s;
+  padding-left: 10px;
+}
+
+.button:hover .button__text {
+  opacity: 1;
+  width: 60%; /* Reduz a expansão do texto */
+  transition-duration: .3s;
+  padding-right: 1rem; /* Ajusta o espaçamento do texto */
+}
+
+.button:active {
+  transform: translate(2px, 2px);
+}
+
 
 
 /* Estilo da Área Usuario */
@@ -95,6 +181,7 @@ header {
     text-align: center;
     padding: 0.4rem;
     border-radius: 5rem;
+    font-size: 1.3rem;
 }
 /* Estilo do css do man do site */
 .container-baixo{
@@ -161,6 +248,7 @@ hr{
     border: 0.2rem solid var(--color06);
     border-radius: 10rem;
 }
+
 .botao-chamado {
     position: fixed;
     right: 20px;
@@ -254,13 +342,17 @@ hr{
   }
   /* -------------MEDIA---------------- */
   @media (max-width: 926px){
-    /* Estilo da Área Usuario */
 .container-header-user{
     width: 100vw;
     display: flex;
     align-items: center;
     padding: 0rem 0rem 0rem 1rem;
     justify-content: space-between;
+}
+.container-baixo{
+  width: 100vw;
+  min-height: 55rem;
+
 }
 
 }
@@ -281,6 +373,7 @@ hr{
 
   .menu-icon {
       display: flex;
+      margin-right: 2rem;
   }
 
   /* Quando o checkbox é clicado, mostra o menu */
@@ -288,6 +381,13 @@ hr{
       display: flex;
       z-index: +10000;
   }
+
+  .container-baixo{
+    width: 100vw;
+    min-height: 56rem;
+  
+  }
+
 }
 .menu img{
   width: 2.5rem;
