Termino da tela - responsividade

--- a/templates/TLadministrador.html
+++ b/templates/TLadministrador.html
@@ -44,24 +44,38 @@
                     </label>
                     <ul class="menu">
                         <li><a href="#home"><img src="/static/IMG/12.png" alt=""> Solicitações</a></li>
-                        <li><a href="#servicos"> <img src="/static/IMG/13.png" alt=""> Serviços</a></li>
+                        <li><a href="#servicos"> <img src="/static/IMG/13.png" alt=""> Relatorios</a></li>
                         <li><a href="#sobre"> <img src="/static/IMG/14.png" alt=""> Sobre</a></li>
-                        <li><a href="#contato"> <img src="/static/IMG/15.png" alt=""> Contato</a></li>
+                        <li><a href="#contato"> <img src="/static/IMG/15.png" alt=""> Finalização</a></li>
                     </ul>
+                    
+                    <button class="button button--logout">
+
+                        <div class="button__icon">
+                      
+                          <svg viewBox="0 0 512 512">
+                            <path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"></path>
+                          </svg>
+                      
+                        </div>
+                      
+                        <div class="button__text">Sair</div>
+                      
+                      </button>
+                      
                 </nav>
-                
-                
+               
             </section>
         </header>
         <main class="container-baixo">
             <section class="container_baixo-ladoEsquerdo">
                 <div class="ladoEsquerdo-txt">
-                    <h2>Serviços<span class="destaque-txt"> Encaminhados</span></h2>
+                    <h2>Serviços já<span class="destaque-txt"> Encaminhados</span></h2>
                     <hr>
                 </div>
                 <div class="ladoEsquerdo-conteudo">
                     <div class="ladoEsquerdo-card">
-                        <p class="horario">10:30am</p>
+                        <p class="horario">10:30am | Pessoa responsavel</p>
                         <div class="card-conteudo">
                             <p class="bloco">Bloco A | sala 23</p>
                             <p class="urgencia">Urgente</p>
