--- a/templates/TLadministrador.html
+++ b/templates/TLadministrador.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="ladoEsquerdo-conteudo">
                     <div class="ladoEsquerdo-card">
-                        <p class="horario">10:30am | Pessoa responsavel</p>
+                        <p class="horario">| Pessoa responsavel</p>
                         <div class="card-conteudo">
                             <p class="bloco">Bloco A | sala 23</p>
                             <p class="urgencia">Urgente</p>
