Criação dos links do menu da página do administrador e a função de logout funcional

--- a/templates/TLadministrador.html
+++ b/templates/TLadministrador.html
@@ -43,13 +43,13 @@
                         <span></span>
                     </label>
                     <ul class="menu">
-                        <li><a href="#home"><img src="/static/IMG/12.png" alt=""> Solicitações</a></li>
+                        <li><a href="/RF003"><img src="/static/IMG/12.png" alt=""> Solicitações</a></li>
                         <li><a href="#servicos"> <img src="/static/IMG/13.png" alt=""> Relatorios</a></li>
-                        <li><a href="#sobre"> <img src="/static/IMG/14.png" alt=""> Sobre</a></li>
+                        <li><a href="/RF004"> <img src="/static/IMG/14.png" alt=""> Sobre</a></li>
                         <li><a href="#contato"> <img src="/static/IMG/15.png" alt=""> Finalização</a></li>
                     </ul>
                     
-                    <button class="button button--logout">
+                    <button class="button button--logout" onclick="logout()">
 
                         <div class="button__icon">
                       
