--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -8,9 +8,12 @@
     <!-- Scripts JavaScript: Carregamento dos arquivos de script da página -->
     <script defer src="/static/JS/funcao-data.js"></script>
     <script defer src = "/static/JS/funcao-horas.js"></script>
+    <script defer src="/static/JS/RF004-ADMrecbSolic.js"></script>
     <script defer src="/static/JS/funcao-voltar.js"></script>
     <!-- Biblioteca de ícones do Font Awesome para uso de ícones na página -->
     <script src="https://kit.fontawesome.com/e9b74fb3c4.js" crossorigin="anonymous"></script>
+    <!-- Biblioteca jQuery para facilitar o uso de Ajax e manipulação de DOM -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- link JS biblioteca SweetAlert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>EASY-REQUEST - Inicial</title>
@@ -60,35 +63,8 @@
             </aside>
 
             <!-- Seção de Cards -->
-            <section class="sectionBaixo__grid-section">
-                {%for x in campo_recebimento%}
-                <article class="sectionBaixo__grid-item">
-                    <div class="card">
-                        <!-- Cabeçalho do card com localização do prédio -->
-                        <header class="card__header">
-                            <span class="card__building" aria-label="Localização do prédio">{{x[2]}} - {{x[1]}}</span>
-                        </header>
-                        <div class="card__body">
-                            <!-- Serviço descrito no card -->
-                            <p class="card__service" aria-label="Serviço">{{x[5]}}</p>
-                            <!-- Pessoa que fez a solicitação -->
-                            <p class="card__responsavel" aria-label="Responsável pela solicitação">{{x[4]}}</p>
-                            <!-- Linha horizontal para separação visual -->
-                            <hr class="card__linha" aria-hidden="true">
-                            <!-- Descrição do serviço -->
-                            <p class="card__descricao" aria-label="Descrição do serviço">
-                                {{x[3]}}
-                            </p>
-                        </div>
-                        <!-- Rodapé do card com botão de ação -->
+            <section class="sectionBaixo__grid-section" id="solicitacoes">
 
-                        <footer class="card__footer">
-                            <button class="card__button" aria-label="Encaminhar solicitação"><a href="/RF004A/{{x[0]}}">Detalhes</a></button>
-                        </footer>
-                    </div>
-
-                </article>
-                {%endfor%}
             </section>
         </section>
     </main>
