Criando validação para o cadastro

--- a/templates/RF001-cad.html
+++ b/templates/RF001-cad.html
@@ -45,31 +45,31 @@
                 <!-- Campo de entrada para o nome completo -->
                 <div class="form-container__input">
                     <label for="nome" class="form-container__label">Nome completo:</label>
-                    <input type="text" id="nome" name="nome" class="form-container__input-text" placeholder="Digite seu nome completo" required>
+                    <input type="text" id="nome" name="nome" class="form-container__input-text" placeholder="Pedro Nascimento" required>
                 </div>
 
                 <!-- Campo de entrada para o CPF -->
                 <div class="form-container__input">
                     <label for="cpf" class="form-container__label">CPF:</label>
-                    <input type="text" id="cpf" name="cpf" class="form-container__input-text" placeholder="Informe seu CPF" required>
+                    <input type="text" id="cpf" name="cpf" class="form-container__input-text" placeholder="000.000.000-00" maxlength="14" required>
                 </div>
 
                 <!-- Campo de entrada para o SN -->
                 <div class="form-container__input">
                     <label for="sn" class="form-container__label">SN:</label>
-                    <input type="text" id="sn" name="sn" class="form-container__input-text" placeholder="Informe seu SN" required>
+                    <input type="text" id="sn" name="sn" class="form-container__input-text" placeholder="SN0000000" required>
                 </div>
 
                 <!-- Campo de entrada para o e-mail -->
                 <div class="form-container__input">
                     <label for="email" class="form-container__label">E-mail:</label>
-                    <input type="email" id="email" name="email" class="form-container__input-text" placeholder="Digite seu e-mail" required>
+                    <input type="email" id="email" name="email" class="form-container__input-text" placeholder="exemplo@exemplo.com" required>
                 </div>
 
                 <!-- Campo de entrada para a senha -->
                 <div class="form-container__input">
                     <label for="senha" class="form-container__label">Senha:</label>
-                    <input type="password" id="senha" name="senha" class="form-container__input-text" placeholder="Crie uma senha" required>
+                    <input type="password" id="senha" name="senha" class="form-container__input-text" placeholder="Pelo menos 6 caracteres" required>
                 </div>
 
                 <!-- Campo de upload de foto -->
@@ -79,7 +79,7 @@
                 </div>
 
                 <!-- Botão de submissão do formulário -->
-                <button class="form-container__button" onclick="cadastrar()">Cadastrar</button>
+                <button class="form-container__button" onclick="cadastrar()">Cadastrar-se</button>
         </section>
     </main>
     <script src="/static/JS/RF001-cad.js" defer></script>
