--- a/static/CSS/RF003-solic.css
+++ b/static/CSS/RF003-solic.css
@@ -174,7 +174,7 @@ input,select{
     border: none;
 }
 
-.form_adendo{
+.form_descricao{
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -182,11 +182,11 @@ input,select{
     color: var(--color04);
 }
 
-.form_adendo label{
+.form_descricao label{
     font-size: 1.5rem;
 }
 
-#adendo{
+#descricao{
     width: 100%;
     height: 9rem;
     border-radius: 2rem;  
