--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -71,9 +71,9 @@
                         <input type="file" name="arquivo" id="arquivo">
                     </div>
                     <!-- Campo de texto para informações adicionais -->
-                    <div class="form_adendo">
-                        <label for="adendo">Adendo:</label>
-                        <input type="text" id="adendo" name="adendo" placeholder="Digite informações adicionais...">
+                    <div class="form_descricao">
+                        <label for="descricao">Descricao:</label>
+                        <input type="text" id="descricao" name="descricao" placeholder="Descreva o serviço a ser realizado...">
                     </div>
                     <!-- Botão de envio da solicitação -->
                     <button type="submit" class="form_btn-enviar" onclick="fazerSolicitacao()">Enviar Solicitação</button>
