--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -73,7 +73,8 @@
                     <!-- Campo de texto para informações adicionais -->
                     <div class="form_descricao">
                         <label for="descricao">Descricao:</label>
-                        <input type="text" id="descricao" name="descricao" placeholder="Descreva o serviço a ser realizado...">
+                        <textarea name="descricao" id="descricao" placeholder="Descreva o serviço a ser realizado..."></textarea>
+                        <!-- <input type="text" id="descricao" name="descricao" placeholder="Descreva o serviço a ser realizado..."> -->
                     </div>
                     <!-- Botão de envio da solicitação -->
                     <button type="submit" class="form_btn-enviar" onclick="fazerSolicitacao()">Enviar Solicitação</button>
