--- a/templates/RF006-TLmanuten.html
+++ b/templates/RF006-TLmanuten.html
@@ -17,8 +17,10 @@
         <!-- link Arquivo JS data -->
          <script defer src="/static/JS/funcao-data.js"></script>
          <script defer src = "/static/JS/funcao-horas.js"></script>
-
-         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add" />
+         <!-- Biblioteca jQuery para facilitar o uso de Ajax e manipulação de DOM -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <!-- Importando fontes do google -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add" />
         <!-- link JS biblioteca SweetAlert -->
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -47,8 +49,8 @@
                     <hr>
                 </div>
                 <!-- Serviço á ser feito -->
-                <div class="ladoEsquerdo-conteudo">
-                    {% for x in campo_encaminhamentos_fazendo %}
+                <div class="ladoEsquerdo-conteudo" id="encaminhamentos_fazendo">
+                    <!-- {% for x in campo_encaminhamentos_fazendo %}
                     <div class="ladoEsquerdo-card">
                         <p class="horario">10:30am</p>
                         <div class="card-conteudo">
@@ -57,15 +59,15 @@
                             <a href="/RF007/{{x[4]}}"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-                    {%endfor%}
+                    {%endfor%} -->
                 </div>
             </section>
             <!-- Serviços encaminhados -->
             <section class="container-servico-encaminhado">
                 <h2>Serviços Encaminhados</h2>
                 <hr>
-                <div class="container-encaminhamento">
-                    {% for x in campo_encaminhamentos_pendentes %}
+                <div class="container-encaminhamento" id="encaminhamentos_pendentes">
+                    <!-- {% for x in campo_encaminhamentos_pendentes %}
                     <a href="/RF006A/{{x[3]}}/{{x[4]}}">
                         <div class="servico-encaminhado">
                             <div class="servico-encaminhado-data">
@@ -75,7 +77,7 @@
                             <p class="urgencia">{{x[2]}}</p>
                         </div>
                     </a>
-                    {%endfor%}
+                    {%endfor%} -->
             <section>
                 <button onclick="redirectSolicitacao()" class="Btn" >
                   
